dnl  Configuration options for the application
dnl     Copyright (C) Michael Still 2002
dnl     
dnl  This program is free software; you can redistribute it and/or modify it
dnl  under the terms of the GNU General Public License as published by the Free
dnl  Software Foundation; either version 2 of the License, or (at your option)
dnl  any later version.
dnl   
dnl  This program is distributed in the hope that it will be useful, but WITHOUT 
dnl  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
dnl  FITNESS FOR A PARTICULAR PURPOSE.dnl    See the GNU General Public License for
dnl  more details.
dnl   
dnl  You should have received a copy of the GNU General Public License along
dnl  with this program; if not, write to the Free Software Foundation, Inc., 675 
dnl  Mass Ave, Cambridge, MA 02139, USA.

dnl Process this file with autoconf to produce a configure script.
AC_INIT(crosspoint.c)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(crosspoint, 0.1)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>

dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lfreetype
AC_CHECK_LIB(freetype, FT_Init_FreeType)

dnl This is an excessively ugly freetype check
AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
if test x$FREETYPE_CONFIG = xno ; then
  AC_MSG_ERROR([*** freetype-config not found])
fi

FREETYPE_CFLAGS="`$FREETYPE_CONFIG --cflags`"
FREETYPE_LIBS="`$FREETYPE_CONFIG --libs`"
CPPFLAGS="$CFLAGS $FREETYPE_CFLAGS"

dnl -lpng:
AC_CHECK_LIB(png, png_init_io)

dnl -lmplot
AC_CHECK_LIB(mplot, plot_newplot)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

AC_DEFINE(_GNU_SOURCE)

AC_OUTPUT(Makefile)
