dnl Process this file with autoconf to produce a configure script.
AC_INIT(libplot.c)
AC_CONFIG_AUX_DIR(config)
AC_REVISION
AM_INIT_AUTOMAKE(libplot, 0.1)
AM_MAINTAINER_MODE

dnl Libtool
AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>

dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lfreetype
AC_CHECK_LIB(freetype, FT_Init_FreeType)

dnl This is an excessively ugly freetype check
AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
if test x$FREETYPE_CONFIG = xno ; then
  AC_MSG_ERROR([*** freetype-config not found])
fi

FREETYPE_CFLAGS="`$FREETYPE_CONFIG --cflags`"
FREETYPE_LIBS="`$FREETYPE_CONFIG --libs`"
CFLAGS="$CFLAGS $FREETYPE_CFLAGS"

dnl -lpng:
AC_CHECK_LIB(png, png_init_io)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)




