bin_PROGRAMS = pandaedit
pandaedit_SOURCES = pandaedit.cpp stringArray.cpp object.cpp dictionary.cpp dictitem.cpp pdf.cpp objectlist.cpp utility.cpp parseinterface.cpp render.cpp matrix.cpp configuration.cpp lzw.cpp fax.cpp raster.cpp pdfDoc.cpp genError.cpp genErrorHandler.cpp genUI.cpp pdfView.cpp genWxErrorHandler.cpp genCanvas.cpp pagecache.cpp verbosity.cpp inflateraster.cpp flate.cpp commands.cpp dlgPageSize.cpp idmangle.cpp dlgPageZoom.cpp