dnl Process this file with autoconf to produce a configure script.
AC_INIT(pandaedit.cpp)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AC_REVISION
AM_INIT_AUTOMAKE(pandaedit, 0.1)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>


dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lpandalex:
AC_CHECK_LIB(pandalex, pandalex_parse)

dnl -lfl:
AC_CHECK_LIB(fl, yywrap)

dnl -lmplot
AC_CHECK_LIB(mplot, plot_newplot)

dnl -ltiff:
AC_CHECK_LIB(tiff, TIFFOpen, CFLAGS="$CFLAGS -DHAVE_LIBTIFF"  LDFLAGS="$LDFLAGS -ltiff")

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(tiffio.h)

dnl Headers for libraries

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF


AC_OUTPUT(Makefile)




