dnl Process this file with autoconf to produce a configure script.
AC_INIT(lexer.l)
AC_CONFIG_AUX_DIR(config)
AC_REVISION
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(pandalex, 0.5)
AM_MAINTAINER_MODE

dnl Libtool
AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>

dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lz:
AC_CHECK_LIB(z, uncompress)

dnl -lfl:
AC_CHECK_LIB(fl, yywrap)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(examples/Makefile Makefile)
