dnl Process this file with autoconf to produce a configure script.
AC_INIT(lexer.l)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER
AC_REVISION
AM_INIT_AUTOMAKE(pandascript, 0.3)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>


dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lpng:
AC_CHECK_LIB(png, png_libpng_ver)

dnl -ltiff:
AC_CHECK_LIB(tiff, TIFFOpen)

dnl -ljpeg:
AC_CHECK_LIB(jpeg, jpeg_std_error)

dnl -lpanda:
AC_CHECK_LIB(panda, pdfopen)

dnl -lfl:
AC_CHECK_LIB(fl, yywrap)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h)

dnl Headers for libraries

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF

AC_OUTPUT(Makefile)