bin_PROGRAMS = x86info
COMMONSOURCES = AMD/MSR-Athlon.c AMD/MSR-K6.c AMD/amd_bluesmoke.c AMD/amd_identify.c Cyrix/cyrix_identify.c IDT/MSR-C3.c IDT/idt_identify.c Intel/intel_bluesmoke.c Intel/cachesize.c Intel/eblcr.c Intel/intel_identify.c MHz.c NatSemi/natsemi_identify.c RiSE/rise_identify.c binary.c connector.c cpuid.c features.c get_model_name.c havecpuid.c identify.c mptable.c mtrr.c rdmsr.c x86info.c cpuid_UP.S
x86info_SOURCES = $(COMMONSOURCES) main.c

