noinst_PROGRAMS = ui
ui_SOURCES = cepConfiguration.cpp cepDataset.cpp cepDate.cpp cepDoc.cpp \
             cepError.cpp cepErrorHandler.cpp cepLs.cpp cepPresentation.cpp \
             cepTSB.cpp cepUI.cpp cepUtility.cpp cepView.cpp cepWxErrorHandler.cpp \
             cepEliminateDialog.cpp cepWindowAlg.cpp cepWindowRect.cpp cepDataWindower.cpp \
             cepwindowhamming.cpp cepwindowblackman.cpp cepwindowchebyshev.cpp
