noinst_PROGRAMS = gdms gdmsbatch

gdms_SOURCES = cepConfiguration.cpp cepDataset.cpp cepDate.cpp cepDoc.cpp cepError.cpp cepErrorHandler.cpp cepLs.cpp cepPresentation.cpp cepTSB.cpp cepUI.cpp cepUtility.cpp cepView.cpp cepWxErrorHandler.cpp cepWindowAlg.cpp cepWindowRect.cpp cepDataWindower.cpp cepwindowhamming.cpp cepwindowblackman.cpp cepwindowchebyshev.cpp cepTmpClean.cpp cepTextErrorHandler.cpp cepStringArray.cpp cepPlot.cpp cepLsUi.cpp cepInterp.cpp cepCanvas.cpp

gdmsbatch_SOURCES = cepConfiguration.cpp cepDataset.cpp cepDate.cpp cepError.cpp cepErrorHandler.cpp cepLs.cpp cepPresentation.cpp cepTSB.cpp cepUtility.cpp cepWindowAlg.cpp cepWindowRect.cpp cepDataWindower.cpp cepwindowhamming.cpp cepwindowblackman.cpp cepwindowchebyshev.cpp cepTmpClean.cpp cepTextErrorHandler.cpp cepStringArray.cpp cepPlot.cpp cepMain.cpp cepInterp.cpp
