dnl Process this file with autoconf to produce a configure script.
AC_INIT(cepError.cpp)
AC_CONFIG_AUX_DIR(config)
AC_REVISION
AM_INIT_AUTOMAKE(cep, 0.1)
AM_MAINTAINER_MODE

dnl Libtool
AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
#AM_PROG_LEX
#AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>


dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lz:
AC_CHECK_LIB(z, uncompress)

#dnl -lfl:
#AC_CHECK_LIB(fl, yywrap)

dnl -lpthread
AC_CHECK_LIB(pthread, pthread_mutex_unlock)

dnl -lXi
AC_CHECK_LIB(Xi, XAllowDeviceEvents)

dnl -lXext
AC_CHECK_LIB(Xext, XGetVisualInfo)

dnl -lX11
AC_CHECK_LIB(X11, XFreeFontInfo)

dnl -lwx  --> THIS IS BAD AND MIGHT BREAK
AC_CHECK_LIB(wx_gtk-2.2, OnIdle__12wxHtmlWindowR11wxIdleEvent)

dnl -ltrivsql
AC_CHECK_LIB(fl, yywrap)

dnl -ltrivsql
AC_CHECK_LIB(trivsql, trivsql_rsmovenext)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Stupid defines to keep wx happy
AC_DEFINE(__WXGTK__)

AC_OUTPUT(Makefile)




