dnl Process this file with autoconf to produce a configure script.
AC_INIT(cepError.cpp)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(cep, 0.1)
AM_MAINTAINER_MODE

dnl Libtool
dnl AC_LIBTOOL_WIN32_DLL
dnl AC_LIBTOOL_DLOPEN

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
dnl AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>

dnl -lfftw:
AC_CHECK_LIB(fftw, fftw_create_plan)

dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lm:
AC_CHECK_LIB(dmalloc, malloc)

dnl -lz:
AC_CHECK_LIB(z, uncompress)

#dnl -lfl:
#AC_CHECK_LIB(fl, yywrap)

dnl -lpthread
AC_CHECK_LIB(pthread, pthread_mutex_unlock)

dnl -lXi
AC_CHECK_LIB(Xi, XAllowDeviceEvents)

dnl -lXext
AC_CHECK_LIB(Xext, XGetVisualInfo)

dnl -lX11
AC_CHECK_LIB(X11, XFreeFontInfo)

dnl -lwx  --> THIS IS BAD AND MIGHT BREAK
AC_CHECK_LIB(wx_gtk-2.2, OnIdle__12wxHtmlWindowR11wxIdleEvent)

dnl -ltrivsql
AC_CHECK_LIB(fl, yywrap)

dnl -ltrivsql
AC_CHECK_LIB(trivsql, trivsql_rsmovenext)

dnl -lplot
AC_CHECK_LIB(plot, plot_newplot)

dnl -lpng
AC_CHECK_LIB(png, png_create_write_struct)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Stupid defines to keep wx happy
AC_DEFINE(__WXGTK__)

dnl Stu[id code to ensure that dvelopers do not ignore warnings
AC_DEFINE(_GNU_SOURCE)
case "$host" in
  *-*-openbsd*)
    CFLAGS="$CFLAGS -pthread"
    CPPFLAGS="$CPPFLAGS -D_REENTRANT"
    CXXFLAGS="$CXXFLAGS -pthread"
    echo "Setting OpenBSD compilation options";;
  *-*-freebsd*)
    CFLAGS="$CFLAGS -pthread"
    CPPFLAGS="$CPPFLAGS -D_THREAD_SAFE"
    CXXFLAGS="$CXXFLAGS -pthread"
    echo "Setting FreeBSD compilation options";;
  *-*-solaris*)
    CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS -DUSE_SOLARIS -DPIC -fPIC"
    LDFLAGS="$LDFLAGS -mimpure-text"
    echo "Setting Solaris compilation options";;
  *-*-linux*)
    dnl Assume that this sucker will be multi threaded. Are we going to be generating shared libs
    dnl be nice, don't file on warnings but inform the developers concerned
    dnl CPPFLAGS="$CPPFLAGS -fPIC -DPIC -D_REENTRANT -Wall -Werror"
    CPPFLAGS="$CPPFLAGS -D_REENTRANT -Wall"
    echo "Setting Linux compilation options";;
  *-*-aix*)
    CPPFLAGS="$CPPFLAGS -D_THREAD_SAFE"
    LIBS="$LIBS -lc_r"
    echo "Setting AIX compilation options";;
  *-*-irix*)
    LDFLAGS="$LDFLAGS -L/usr/lib32"
    echo "Setting Irix compilation options";;
  *)
  echo "This project may not compile on this system. Good luck :-)";;
esac

AC_OUTPUT(Makefile)
